# platzky-B4ULeave

./: .gitignore  MakeFile  Makefile  README.md  pyproject.toml
.github/workflows/: tests.yml  todo.yaml
b4uleave/: __init__.py  entrypoint.py
platzky_b4uleave/: __init__.py  entrypoint.py
tests/: test_b4uleave.py
tests/e2e_tests/: e2e_app.py  e2e_test_data.json  package-lock.json  package.json
tests/e2e_tests/cypress/e2e/: confirm_leave_popup_spec.cy.js
tests/unit_tests/: test_b4uleave.py
