[tool.poetry]
name = "B4ULeave"
version = "0.1.0"
description = "Plugin B4ULeave wyświetla modalne okno przy próbie opuszczenia strony."
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
platzky = "^0.2.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"